# assesment-rust

./: .env  .env.example  AI_USAGE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml  test_flow.sh
migrations/: 20260609031240_create_user.up.sql
src/: lib.rs  main.rs
src/handlers/: mod.rs  tasks.rs
src/models/: mod.rs  task.rs
src/repository/: mod.rs  task_repo.rs  user_repo.rs
tests/: integration_test.rs
