[package]
name = "assesment-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.9", features = ["macros"]}
chrono = { version = "0.4.45", features = ["serde"] }
jsonwebtoken = "10.4.0"
rand = "0.10.1"
redis = { version = "1.2.2", features = ["tokio-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.2", features = ["v4", "serde"] }
